# docs/swagger.json
@@ -129,6 +129,56 @@
                 }
             }
         },
+        "/test-by-title/{title}": {
+            "get": {
+                "description": "get test by title",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Test By Title"
+                ],
+                "summary": "ShowTestByTitle",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Test title",
+                        "name": "title",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Test"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/test-taken": {
             "get": {
                 "security": [
@@ -160,7 +210,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TestTaken"
+                            "type": "string"
                         }
                     },
                     "202": {
@@ -350,7 +400,7 @@
         },
         "/test/{id}": {
             "get": {
-                "description": "get string by ID",
+                "description": "get test by ID",
                 "consumes": [
                     "application/json"
                 ],
